# geektime-bootcamp-ai

./: .gitignore  .pre-commit-config.yaml  Summary.md
site/: package-lock.json
site/public/files/: tchen.itermcolors
specs/site/: instructions.md
w2/db_query/backend/: pyproject.toml
w2/db_query/backend/alembic/versions/: 001_initial_schema.py
w2/db_query/backend/app/: config.py
w2/db_query/backend/app/api/v1/: queries.py
w2/db_query/backend/app/models/: schemas.py
w2/db_query/backend/app/services/: nl2sql.py
w2/db_query/backend/scripts/: create_interview_db_pg.sql
w2/db_query/docs/: FEATURE_EXPORT.md
w2/db_query/frontend/: package-lock.json  package.json
w5/pg-mcp/review-solutions/: 01-multi-database-security.md  02-resilience-observability.md  03-model-defects-testing.md  04-multi-database-config.md  README.md
w6/opencode-introspection/: .gitignore  CLAUDE.md  opencode.json
w6/opencode-introspection/logs/: ses_47476d834ffeLuqZWiBav51d6z_75f26409.jsonl  ses_474918fadffe1rOTbVH0kNAr28_2d1a538b.jsonl  ses_474918fadffe1rOTbVH0kNAr28_e73535db.jsonl  ses_47491cb20ffelSGeNjkmsJFPkM_364497cf.jsonl  ses_474c65af4ffeDrTmVytMYv91Cu_c17f7d61.jsonl  ses_474c67150ffeeIsBKWxsdiQyj6_1edc72cd.jsonl  ses_474c7ce41fferIoPcHarfj6bCd_2998a376.jsonl  ses_474c7ce41fferIoPcHarfj6bCd_ed81e38c.jsonl
w6/opencode-introspection/plugins/: log-conversation.ts
w6/opencode-introspection/specs/: visualizer-design.md
w6/opencode-introspection/visualizer/: CLAUDE.md  index.html  package-lock.json  package.json  (+1 more)
w6/simple-agent/: package-lock.json  package.json
(+47 files in other folders)
